Additional JVM arg adjustments